--- a/BLE.Client/BLE.Client.Droid/Properties/AndroidManifest.xml
+++ b/BLE.Client/BLE.Client.Droid/Properties/AndroidManifest.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.ble.client" android:installLocation="auto">
 	<uses-sdk android:minSdkVersion="15" android:targetSdkVersion="23" />
 	<application android:label="BLE Explorer" android:icon="@drawable/icon" android:theme="@style/MyTheme"></application>
